Package macOS installable bundle as PKG instead of DMG